# jax-bonsai

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  test_gemma3.py  test_qwen3.py
bonsai/generate/: beam_search.py  contrastive_search.py  inference.py  sampler.py  tokenizer_adapter.py  utils.py  validation.py
bonsai/models/gemma3/: README.md  model.py  params.py
bonsai/models/gemma3/tests/: test_gemma3.py  test_model.py
bonsai/models/llama3/: README.md  model.py  params.py
bonsai/models/llama3/tests/: test_llama3.py
bonsai/models/qwen3/: README.md  model.py  params.py  qwen3_example.ipynb
bonsai/models/qwen3/tests/: run_model.py  test_model.py  test_qwen3.py
examples/: qwen3_example.ipynb
models/: README.md  model.py
models/qwen3/: params.py
models/tests/: test_gemma3.py
