[project]
name = "jax-bonsai"
version = "0.0.0"
authors = [
  { name = "JAX-bonsai developers", email = "jiyounha@google.com" },
]
description = "A collection of lightweight, open-source models built on JAX."
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "jax",
  "jaxlib",
  "flax",
]

[project.urls]
Source = "https://github.com/jenriver/jax-bonsai"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
